--- a/Notebooks/clase2-ldd-estadisticaDescriptiva.ipynb
+++ b/Notebooks/clase2-ldd-estadisticaDescriptiva.ipynb
@@ -868,6 +868,76 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Archivos de datos"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "La biblioteca Pandas nos permite trabajar fácilmente con archivos de datos.\n",
+    "1. Leer el archivo casos_coronavirus.csv .\n",
+    "2. Graficar la curva de casos por día.\n",
+    "3. Graficar la curva de casos acumulados.\n",
+    "4. Definir log_cum_casos como el logaritmo de la cantidad de casos acumulados y graficar en función de la cantidad de días transcurridos.\n",
+    "\n",
+    "Utilicen o modifiquen el siguiente código."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-03-19T15:23:45.623370291Z",
+     "start_time": "2024-03-19T15:23:45.247789793Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "df = pd.read_csv(\"../Datos/casos_coronavirus.csv\") # DataFrame\n",
+    "df.head()  # Primeras filas del DataFrame"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-03-19T15:23:45.623370291Z",
+     "start_time": "2024-03-19T15:23:45.247789793Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Información básica del DataFrame\n",
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[\"confirmados_Nuevos\"].plot()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "casos_acumulados = df[\"confirmados_Nuevos\"].cumsum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Estadística descriptiva"
    ]
   },
