--- a/Practicas/practica2-ldd-1c2024.tex
+++ b/Practicas/practica2-ldd-1c2024.tex
@@ -203,7 +203,7 @@ Esto crea un nuevo objeto \lstinline{gapminder}. Pueden ver el contenido con el 
 
 \item ?`De qu\'e clase es el objeto \lstinline{gapminder}? ?`Qu\'e variables tiene el DataFrame \lstinline{gapminder} y de qu\'e clase son? ?`Qu\'e \'indices usa?
 
-\item Explorar el tama\~no del DataFrame \lstinline{gapminder} usando la funci\'on \lstinline{shape()}.
+\item Explorar el tama\~no del DataFrame \lstinline{gapminder} usando la funci\'on \lstinline{shape}.
 
 \item ?`De cu\'antos pa\'ises hay datos? Ayuda: averiguar qu\'e hacen los m\'etodos \lstinline{unique()} y \lstinline{nunique()} aplicados a series.
 
