Deje para completar el codigo del histograma del ej 8c

--- a/Practicas/practica3-ldd-1c2024.tex
+++ b/Practicas/practica3-ldd-1c2024.tex
@@ -227,7 +227,7 @@ pinguinos_por_isla = penguins.???   # Usar el codigo del item anterior.
 \item El gráfico que acabamos de hacer es un histograma categórico (usamos una variable categórica en el eje X). Podemos realizar el mismo gráfico usando la función \lstinline{Hist()} para contar automáticamente las cantidades (sin definir una variable \lstinline{pinguinos_por_isla}. Completar el siguiente código.
 \begin{lstlisting}
 (
-    so.Plot(data = penguins, x=island)
+    so.Plot(data = penguins, ???)
     .add(so.Bar(), so.Hist())
 )
 \end{lstlisting}
