Cambios en las slides de la Clase 4
Cambios en la parte de boxplot

--- a/Slides/clase04-visualizacion-slides.tex
+++ b/Slides/clase04-visualizacion-slides.tex
@@ -408,7 +408,7 @@ Un gráfico \textbf{box plot} usa cajas y líneas para mostrar información de l
 %------------------------------------------------------------------
 
 \begin{frame}
-\frametitle{Elementos de un Box plot}
+\frametitle{Elementos de un Box plot: cuartiles}
 
 Dada una variable numérica, ordenamos los valores y los partimos en 4 grupos de igual tamaño.
 
@@ -455,16 +455,16 @@ Ordenamos los datos de menor a mayor y tomamos valores que dividen a los datos e
 
 %------------------------------------------------------------------
 
-\begin{frame}
-\frametitle{Box plot}
-
-Un gráfico \textbf{box plot} usa cajas y líneas para mostrar información de la distribución de uno o más grupos de datos numéricos.
-
-\begin{center}
-\includegraphics[scale=.5]{clase4-box-plot-construction.png}
-\end{center}
-
-\end{frame}
+%\begin{frame}
+%\frametitle{Box plot}
+%
+%Un gráfico \textbf{box plot} usa cajas y líneas para mostrar información de la distribución de uno o más grupos de datos numéricos.
+%
+%\begin{center}
+%\includegraphics[scale=.5]{clase4-box-plot-construction.png}
+%\end{center}
+%
+%\end{frame}
 
 %------------------------------------------------------------------
 
@@ -498,22 +498,6 @@ Cualquier valor de los datos más allá de esa distancia se considera un dato at
 
 \end{frame}
 
-%------------------------------------------------------------------
-
-\begin{frame}
-\frametitle{¿Qué buscan en una búsqueda laboral?}
-
-[general\_dat] busqueda Machine Learnining Engineer SSr- Quantit
-
-Perfil de las personas:
-
-- Ser estudiante de Grado o graduade de carreras como Ciencia de Datos, Ciencias de la Computación, Física, Matemática, Ingeniería, u otra carrera afín.
-
-- Conocimientos de programación en Python.
-
-- Familiaridad con bibliotecas como Pandas, Numpy, Matplotlib,  Seaborn y Scikit-learn.
-
-\end{frame}
 
 
 \end{document}
