Práctica 3 y Clase 4 actualizada
Completé algunos detalles

--- a/Slides/clase04-visualizacion-slides.tex
+++ b/Slides/clase04-visualizacion-slides.tex
@@ -377,18 +377,69 @@ Un \textbf{gráfico de barras} muestra la relación entre una variable categóri
 \begin{frame}
 \frametitle{Histograma}
 
+Un \textbf{histograma} puede pensarse como un caso particular de gráfico de barras, para una serie de datos de una variable numérica o categórica, donde en el eje $y$ codificamos cantidades o frecuencias.
+
+\vspace{0.5cm}
+
+\begin{minipage}{.45\textwidth}
+\begin{center}
+\includegraphics[scale=0.30]{clase4-histograma_categorico.png}
+\end{center}
+\end{minipage} \hspace{1cm} %
+\begin{minipage}{.45\textwidth}
+\begin{center}
+\includegraphics[scale=1.5]{clase4-histogram-example-1.png}
+\end{center}
+\end{minipage}
+
+\end{frame}
+
+
+%------------------------------------------------------------------
+
+\begin{frame}
+\frametitle{Histograma categórico}
+
 \begin{minipage}{.55\textwidth}
-Un \textbf{histograma} puede pensarse como un caso particular de gráfico de barras, para una serie de datos de una variable numérica o categórica.
+Si la variable es categórica:
+\begin{itemize}
+\item en el eje $X$ representamos los distintos valores de la variable.
+\item en el eje $Y$ representamos la cantidad de veces que aparece cada valor en la serie.
+\end{itemize}
 
-En el eje $x$ representamos los valores de una variable categórica o intervalos (del mismo tamaño) de una variable numérica.
+El tamaño de la barra representa la cantidad de veces que se repite cada valor de la variable categórica en la serie.
 
-El tamaño de la barra representa la cantidad de veces que se repite cada valor de la variable categórica en la serie, o la cantidad de veces que el valor de la serie cae en cada uno de los intervalos.
+\end{minipage} \hspace{1cm} %
+\begin{minipage}{.35\textwidth}
+\begin{center}
+\includegraphics[scale=0.30]{clase4-histograma_categorico.png}
+\end{center}
+\end{minipage}
+
+\end{frame}
+
+%------------------------------------------------------------------
+
+\begin{frame}
+\frametitle{Histograma de una variable numérica}
+
+\begin{minipage}{.55\textwidth}
+Si la variable es numérica:
+\begin{itemize}
+\item en el eje $X$ representamos intervalos contiguos de los valores que toma la variable.
+\item en el eje $Y$ representamos la cantidad de veces que los valores de la serie caen en cada intevalo.
+\end{itemize}
+
+El tamaño de la barra representa la cantidad de veces que el valor de la serie cae en ese intervalo.
+
 \end{minipage} \hspace{1cm} %
 \begin{minipage}{.35\textwidth}
 \begin{center}
 \includegraphics[scale=1.5]{clase4-histogram-example-1.png}
 \end{center}
 \end{minipage}
+
+
 \end{frame}
 
 
