Modificado lo que indico Santi y algunas cosas de la Clase 7

--- a/Notebooks/clase6-ldd-regresionlineal.ipynb
+++ b/Notebooks/clase6-ldd-regresionlineal.ipynb
@@ -188,7 +188,7 @@
    "source": [
     "**MUY IMPORTANTE:** notar los corchetes extra de `datos[['metros_cuad']]` y `datos[['precio']]`. Los doble corchetes hacen que `datos[['precio']]` sea un pandas.Dataframe y no un pandas.Series.\n",
     "\n",
-    "<span style=\"color:red\">**EL MÉTODO .fit() ADMITE DATAFRAMES, NO ADMITE SERIES. USAR DOBLE CORCHETE.**</span>"
+    "<span style=\"color:red\">**EL MÉTODO .fit() ADMITE DATAFRAMES (O MATRICES), NO ADMITE SERIES (NI ARRAYS). USAR DOBLE CORCHETE.**</span>"
    ]
   },
   {
@@ -231,7 +231,7 @@
     "\n",
     "Con los valores de $\\beta_0$ y $\\beta_1$ podemos predecir cuanto será la propina según el valor de la comida. Supongamos que queremos predecir la propina que se deja por una cuenta \\\\$35. Utilizamos el método `predict()` del modelo.\n",
     "\n",
-    "<span style=\"color:red\">**EL MÉTODO .predict() TAMBIEN SOLO ADMITE ADMITE DATAFRAMES.**</span>"
+    "<span style=\"color:red\">**EL MÉTODO .predict() TAMBIEN SOLO ADMITE ADMITE DATAFRAMES (O MATRICES).**</span>"
    ]
   },
   {
@@ -380,7 +380,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "y_pred = modelo.predict(datos[['total_bill']]).flatten()\n",
+    "y_pred = modelo.predict(datos[['total_bill']])\n",
     "r2_score(datos[['tip']], y_pred)"
    ]
   },
