--- a/Practicas/practica4-ldd-1c2024.tex
+++ b/Practicas/practica4-ldd-1c2024.tex
@@ -134,7 +134,7 @@
      \]
 
 
-    La función debe tomar como argumentos a \texttt{x} e \texttt{y}, que son columnas de un dataframe, y devolver los valores de $\beta_0$ y $\beta_1$. 
+    La función debe tomar como argumentos a \texttt{x} e \texttt{y}, que son \verb|pandas.Series| o \verb|numpy.array|, y devolver los valores de $\beta_0$ y $\beta_1$. 
     
     \textbf{Sugerencia:} recordar que dado un \texttt{pandas Series} se utiliza \texttt{.mean()} para calcular su promedio y recordar el uso de \texttt{np.sum}
     \vspace{0.2cm} 
