--- a/Slides/clase06-regresionLineal-slides.tex
+++ b/Slides/clase06-regresionLineal-slides.tex
@@ -166,7 +166,7 @@
     \vspace{0.5em}
     
     \normalsize
-    Queremos utilizar los datos que tenemos para poder \textbf{predecir observaciones futuras}. Los valores a predecir son valores \textbf{numéricos}, más precisamente, continuos.
+    Queremos utilizar los datos que tenemos para poder \textbf{estimar datos que no conocemos} o \textbf{predecir observaciones futuras}. Los valores a predecir son valores \textbf{numéricos}, más precisamente, continuos.
 
     \vspace{1cm}
     \textbf{Ejemplo:} predecir el valor de un inmueble a partir de su tamaño (m$^2$)
@@ -294,7 +294,7 @@
     \vspace{1em}
 
     \normalsize
-    \textbf{Error cuadrático medio (MSE):} cuantifica qué tan cerca está un valor predicho del valor real:
+    \textbf{Error cuadrático medio (ECM):} cuantifica qué tan cerca está un valor predicho del valor real:
     \[\dfrac{1}{n}\sum_{i=1}^n (y_i - \hat{y}_i)^2\]
 \end{frame}
 
